Добавили сортировку по режиссёрам