@@ -1,23 +1,28 @@
 package ru.yandex.practicum.filmorate.storage.director;
 
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.jdbc.core.simple.SimpleJdbcInsert;
 import org.springframework.stereotype.Repository;
-import ru.yandex.practicum.filmorate.storage.mappers.DirectorRowMapper;
 import ru.yandex.practicum.filmorate.model.Director;
 import ru.yandex.practicum.filmorate.model.Film;
+import ru.yandex.practicum.filmorate.storage.BaseRepository;
+import ru.yandex.practicum.filmorate.storage.mappers.DirectorRowMapper;
 
-import java.util.*;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Repository
-@RequiredArgsConstructor
 @Slf4j
-public class DirectorDbStorage implements DirectorStorage {
-	private final JdbcTemplate jdbc;
-
+public class DirectorDbStorage extends BaseRepository implements DirectorStorage {
+	private static final String CREATE_DIRECTOR =
+		"INSERT INTO directors (name) VALUES (?)";
 	private static final String FIND_ALL_QUERY =
 		"SELECT director_id, name FROM directors ORDER BY director_id";
 	private static final String FIND_BY_ID_QUERY =
@@ -26,24 +31,37 @@ public class DirectorDbStorage implements DirectorStorage {
 		"UPDATE directors SET name = ? WHERE director_id = ?";
 	private static final String DELETE_QUERY =
 		"DELETE FROM directors WHERE director_id = ?";
-	private static final String FIND_BY_FILM_ID_QUERY =
-		"SELECT d.director_id, d.name " +
-			"FROM directors AS d " +
-			"JOIN film_director AS fd ON d.director_id = fd.director_id " +
-			"WHERE fd.film_id = ? " +
-			"ORDER BY d.director_id";
-	private static final String DELETE_BY_FILM_ID_QUERY =
-		"DELETE FROM film_director WHERE film_id = ?";
-	private static final String INSERT_TO_FILM_DIRECTOR =
-		"INSERT INTO film_director (film_id, director_id) VALUES (?, ?)";
-	private static final String FIND_DIRECTORS_BY_FILM_IDS =
-		"SELECT fd.film_id, d.director_id, d.name " +
-			"FROM directors d " +
-			"JOIN film_director fd ON d.director_id = fd.director_id " +
-			"WHERE fd.film_id IN (%s) " +
-			"ORDER BY fd.film_id, d.director_id";
+	private static final String FIND_BY_FILM_ID_QUERY = """
+		SELECT d.director_id, d.name
+		FROM directors AS d
+		JOIN film_director AS fd ON d.director_id = fd.director_id
+		WHERE fd.film_id = ?
+		ORDER BY d.director_id
+		""";
+
+	private static final String DELETE_BY_FILM_ID_QUERY = """
+		DELETE FROM film_director
+		WHERE film_id = ?
+		""";
+
+	private static final String INSERT_TO_FILM_DIRECTOR = """
+		INSERT INTO film_director (film_id, director_id)
+		VALUES (?, ?)
+		""";
+
+	private static final String FIND_DIRECTORS_BY_FILM_IDS = """
+		SELECT fd.film_id, d.director_id, d.name
+		FROM directors d
+		JOIN film_director fd ON d.director_id = fd.director_id
+		WHERE fd.film_id IN (%s)
+		ORDER BY fd.film_id, d.director_id
+		""";
 
 	private final DirectorRowMapper directorRowMapper = new DirectorRowMapper();
+
+	public DirectorDbStorage(JdbcTemplate jdbc) {
+		super(jdbc);
+	}
 
 	@Override
 	public Set<Director> getDirectors() {
@@ -51,28 +69,14 @@ public class DirectorDbStorage implements DirectorStorage {
 	}
 
 	@Override
-	public Optional<Director> getDirectorById(Integer id) {
-		try {
-			return Optional.ofNullable(jdbc.queryForObject(FIND_BY_ID_QUERY, directorRowMapper, id));
-		} catch (EmptyResultDataAccessException e) {
-			return Optional.empty();
-		}
+	public Optional<Director> getDirectorById(Long id) {
+		return jdbc.query(FIND_BY_ID_QUERY, directorRowMapper, id).stream().findFirst();
 	}
 
 	@Override
 	public Director createDirector(Director director) {
-		SimpleJdbcInsert insert = new SimpleJdbcInsert(jdbc)
-			.withTableName("directors")
-			.usingGeneratedKeyColumns("director_id");
-
-		Map<String, Object> parameters = Map.of("name", director.getName());
-		Number key = insert.executeAndReturnKey(parameters);
-
-		if (key == null) {
-			throw new RuntimeException("Failed to create director");
-		}
-
-		director.setId(key.intValue());
+		long id = insert(CREATE_DIRECTOR, director.getName());
+		director.setId(id);
 		log.info("Создан режиссёр: {}", director);
 		return director;
 	}
@@ -89,7 +93,7 @@ public class DirectorDbStorage implements DirectorStorage {
 	}
 
 	@Override
-	public boolean deleteDirector(Integer id) {
+	public boolean deleteDirector(Long id) {
 		int rows = jdbc.update(DELETE_QUERY, id);
 		if (rows > 0) {
 			log.info("Удалён режиссёр с id = {}", id);
@@ -102,7 +106,10 @@ public class DirectorDbStorage implements DirectorStorage {
 	@Override
 	public void addDirectors(Long filmId, Set<Director> directors) {
 		for (Director director : directors) {
-			jdbc.update(INSERT_TO_FILM_DIRECTOR, filmId, director.getId());
+			Long directorId = director.getId();
+			if (directorId != null) {
+				jdbc.update(INSERT_TO_FILM_DIRECTOR, filmId, directorId);
+			}
 		}
 	}
 
@@ -129,7 +136,7 @@ public class DirectorDbStorage implements DirectorStorage {
 		List<Long> filmIds = films.stream()
 			.map(Film::getId)
 			.filter(Objects::nonNull)
-			.toList();
+			.collect(Collectors.toList());
 
 		if (filmIds.isEmpty()) return;
 
@@ -146,10 +153,16 @@ public class DirectorDbStorage implements DirectorStorage {
 			return ps;
 		}, rs -> {
 			Long filmId = rs.getLong("film_id");
-			Director director = new Director(
-				rs.getInt("director_id"),
-				rs.getString("name")
-			);
+			Long directorId = rs.getLong("director_id");
+
+			if (rs.wasNull()) {
+				log.warn("Получен NULL для director_id в результате запроса");
+				return;
+			}
+
+			String name = rs.getString("name");
+
+			Director director = new Director(directorId, name);
 			directorsByFilmId
 				.computeIfAbsent(filmId, k -> new LinkedHashSet<>())
 				.add(director);
